--- a/main.html
+++ b/main.html
@@ -4,13 +4,76 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<style>
+  :root {
+    --page-background-color: rgb(135, 206, 235);
+  }
+
+  body {
+    background-color: var(--page-background-color);
+    margin: 0;
+    padding: 20px;
+    font-family: Arial, sans-serif;
+  }
+
+  p:first-child {
+    color: white;
+    background-color: black;
+    padding: 10px;
+  }
+
+  p:nth-child(2) {
+    color: black;
+  }
+
+  p:last-child {
+    color: red;
+  }
+
+  ul {
+    list-style-type: none;
+    padding: 0;
+  }
+
+  li {
+    background-color: gray;
+    width: 50%;
+    padding: 10px;
+    font-size: 16px;
+  }
+
+  li:nth-child(odd) {
+    background-color: white;
+  }
+
+  li:first-child,
+  li:last-child {
+    font-size: 22px;
+  }
+
+  li:nth-last-child(3) {
+    background-color: pink;
+  }
+</style>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <article>
+    <p>First paragraph: White text on a black background</p>
+    <p>Second paragraph: Standard text color</p>
+    <p>Third paragraph: Red text</p>
+  </article>
 
+  <ul>
+    <li>Item 1</li>
+    <li>Item 2</li>
+    <li>Item 3</li>
+    <li>Item 4</li>
+    <li>Item 5</li>
+  </ul>
 </body>
 
 </html>
